feat: 발주 알림 기능 구현 (#90)
* feat: Entrance 생성 kafka consumer 구현

* [LCR-295] refactor: Item 테이블 수정

* [LCR-295] feat: OrderItem entity 생성

* [LCR-295] refactor: 추천 발주량 위치 수정

* [LCR-295] refactor: 실제 발주 수량 타입 변경

* [LCR-295] feat: 발주 저장 이벤트 및 핸들러 구현

# Conflicts:
#	src/main/java/com/lgcns/domain/item/kafka/consumer/ItemPurchasedConsumer.java

* [LCR-295] feat: 일일 평균 상품 판매량 업데이트 스케줄러 구현

* [LCR-295] refactor: 속성 기본값 변경 및 적용

* [LCR-295] refactor: queryDsl 수정

* [LCR-295] refactor: 메서드명 수정

* [LCR-295] refactor: 발주 생성 시 isAlarmed true 수정 추가

* [LCR-295] test: 발주 및 알림 생성 테스트

* [LCR-295] feat: 발주 저장 이벤트 및 핸들러 구현

* [LCR-295] feat: 일일 평균 상품 판매량 업데이트 스케줄러 구현

# Conflicts:
#	src/main/java/com/lgcns/domain/item/repository/ItemRepository.java
#	src/main/java/com/lgcns/domain/item/scheduler/ItemAverageSalesScheduler.java
#	src/main/java/com/lgcns/domain/item/service/ItemService.java
#	src/main/java/com/lgcns/domain/item/service/ItemServiceImpl.java
#	src/main/resources/db/migration/V27__alter_item_table_add_columns.sql

# Conflicts:
#	src/main/java/com/lgcns/domain/item/repository/ItemRepository.java

* [LCR-295] refactor: ItemAnalysis, ItemSalesStats 제거 및 Item으로 이동

* [LCR-295] feat: 추천 발주량 업데이트 서비스 메서드 구현

* [LCR-295] refactor: 중복 아이템 조회 메서드 삭제

* [LCR-295] refactor: Enum type에 AllArgs, Getter 적용

* [LCR-295] refactor: Async Config 분리

* [LCR-295] refactor: private 타입 초기화 제거

* [LCR-295] refactor: 인기 상품 조회 endpoint 수정

* [LCR-295] refactor: Collectors.toList() 매서드 정리

* [LCR-295] refactor: OrderItemStatus get 메서드 제거